JumpScript/tests/baselines/reference/asyncInterface_es5.errors.txt
tests/cases/conformance/async/es5/asyncInterface_es5.jump(1,1): error TS1042: 'async' modifier cannot be used here.


==== tests/cases/conformance/async/es5/asyncInterface_es5.jump (1 errors) ====
    async interface I {
    ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
    }